Committing end of pairing session progress